--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
         /* Floating Action Button */
         .fab-shadow { box-shadow: 0 4px 15px rgba(0, 180, 219, 0.4); }
+        .fab-position { bottom: calc(var(--safe-bottom) + 85px); }
 
         /* Custom Scrollbar */
         ::-webkit-scrollbar { width: 0px; background: transparent; }
@@ -117,14 +118,12 @@
             ctx.fillRect(0, 0, size, size);
 
             // 2. Draw Standard Gas Pump Icon using SVG Path
-            // This ensures geometric perfection and matches the user's reference image.
             const pathData = "M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33a2.5 2.5 0 0 0 2.5 2.5c.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z";
             
             const p = new Path2D(pathData);
             ctx.fillStyle = "white";
             
             // Center and Scale Logic
-            // Standard icon is 24x24. We want to scale it to fill about 65% of the 1024px canvas.
             ctx.translate(size / 2, size / 2);
             const scale = size / 36; 
             ctx.scale(scale, scale);
@@ -1174,7 +1173,7 @@
                              ${logs.map(log => this.renderLogCard(log)).join('') || `<div class="text-center text-slate-400 py-12 italic">${utils.t('no_records')}</div>`}
                         </div>
                     </div>
-                    <button onclick="ui.openAddFuel()" class="fixed bottom-24 right-6 bg-gradient-to-r from-teal-400 to-teal-600 text-white w-14 h-14 rounded-full flex items-center justify-center fab-shadow active:scale-90 transition transform z-30">
+                    <button onclick="ui.openAddFuel()" class="fixed fab-position right-6 bg-gradient-to-r from-teal-400 to-teal-600 text-white w-14 h-14 rounded-full flex items-center justify-center fab-shadow active:scale-90 transition transform z-30">
                         <span class="material-icons text-3xl">add</span>
                     </button>
                 `;
@@ -1206,7 +1205,7 @@
                              ${logs.map(log => this.renderLogCard(log)).join('') || `<div class="text-center text-slate-400 py-12 italic">${utils.t('no_records')}</div>`}
                         </div>
                     </div>
-                    <button onclick="ui.openAddService()" class="fixed bottom-24 right-6 bg-gradient-to-r from-indigo-500 to-purple-600 text-white w-14 h-14 rounded-full flex items-center justify-center fab-shadow active:scale-90 transition transform z-30">
+                    <button onclick="ui.openAddService()" class="fixed fab-position right-6 bg-gradient-to-r from-indigo-500 to-purple-600 text-white w-14 h-14 rounded-full flex items-center justify-center fab-shadow active:scale-90 transition transform z-30">
                         <span class="material-icons text-3xl">add</span>
                     </button>
                 `;
@@ -1226,7 +1225,7 @@
                              ${logs.map(log => this.renderLogCard(log)).join('') || `<div class="text-center text-slate-400 py-12 italic">${utils.t('no_records')}</div>`}
                         </div>
                     </div>
-                    <button onclick="ui.openAddParking()" class="fixed bottom-24 right-6 bg-gradient-to-r from-blue-500 to-blue-600 text-white w-14 h-14 rounded-full flex items-center justify-center fab-shadow active:scale-90 transition transform z-30">
+                    <button onclick="ui.openAddParking()" class="fixed fab-position right-6 bg-gradient-to-r from-blue-500 to-blue-600 text-white w-14 h-14 rounded-full flex items-center justify-center fab-shadow active:scale-90 transition transform z-30">
                         <span class="material-icons text-3xl">add</span>
                     </button>
                 `;
