--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@ END:VCALENDAR`;
                         <div class="space-y-3 pb-24">
                             ${filteredLogs.length ? filteredLogs.map(l => this.renderLogCard(l)).join('') : `<div class="text-center theme-text-sub py-12">No records found</div>`}
                         </div>
-                        <button onclick="ui.openAddFuel()" class="fixed bottom-[calc(90px+var(--safe-bottom))] right-6 w-14 h-14 rounded-full grad-teal text-white shadow-xl flex items-center justify-center active:scale-90 transition-transform z-50">
+                        <button onclick="ui.openAddFuel()" class="fixed bottom-[calc(130px+var(--safe-bottom))] right-6 w-14 h-14 rounded-full grad-teal text-white shadow-xl flex items-center justify-center active:scale-90 transition-transform z-50">
                             <span class="material-icons">add</span>
                         </button>
                     </div>
@@ -992,7 +992,7 @@ END:VCALENDAR`;
                         <div class="space-y-3 pb-24">
                             ${filteredLogs.length ? filteredLogs.map(l => this.renderLogCard(l)).join('') : `<div class="text-center theme-text-sub py-12">No records found</div>`}
                         </div>
-                        <button onclick="ui.openAddService()" class="fixed bottom-[calc(90px+var(--safe-bottom))] right-6 w-14 h-14 rounded-full bg-white dark:bg-slate-700 theme-text-heading shadow-xl flex items-center justify-center active:scale-90 transition-transform z-50 border theme-border">
+                        <button onclick="ui.openAddService()" class="fixed bottom-[calc(130px+var(--safe-bottom))] right-6 w-14 h-14 rounded-full bg-white dark:bg-slate-700 theme-text-heading shadow-xl flex items-center justify-center active:scale-90 transition-transform z-50 border theme-border">
                             <span class="material-icons">add</span>
                         </button>
                     </div>
@@ -1020,7 +1020,7 @@ END:VCALENDAR`;
                         <div class="space-y-3 pb-24">
                             ${filteredLogs.length ? filteredLogs.map(l => this.renderLogCard(l)).join('') : `<div class="text-center theme-text-sub py-12">No records yet</div>`}
                         </div>
-                        <button onclick="ui.openAddParking()" class="fixed bottom-[calc(90px+var(--safe-bottom))] right-6 w-14 h-14 rounded-full bg-blue-600 text-white shadow-xl flex items-center justify-center active:scale-90 transition-transform z-50">
+                        <button onclick="ui.openAddParking()" class="fixed bottom-[calc(130px+var(--safe-bottom))] right-6 w-14 h-14 rounded-full bg-blue-600 text-white shadow-xl flex items-center justify-center active:scale-90 transition-transform z-50">
                             <span class="material-icons">add</span>
                         </button>
                      </div>
@@ -1834,4 +1834,4 @@ END:VCALENDAR`;
         }
     </script>
 </body>
-</html>--- END OF FILE index.html ---
+</html>
