fix: restore consistent UI with built app.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="/manifest.webmanifest">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <title>FuelMate</title>
-    <link rel="stylesheet" href="/src/main.css">
+    <link rel="stylesheet" href="/app.css">
     <link rel="stylesheet" href="/material-icons/material-icons.css">
     <style>
         :root {
