fix: restore original UI via tailwind+google icons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>FuelMate</title>
     <link rel="stylesheet" href="./app.css">
     <link rel="stylesheet" href="./material-icons/material-icons.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
             --safe-top: env(safe-area-inset-top, 20px);
