--- a/index.html
+++ b/index.html
@@ -2277,6 +2277,7 @@ END:VCALENDAR`;
                     { id: 'parking', icon: 'local_parking', label: utils.t('parking') },
                     { id: 'maintenance', icon: 'build', label: 'Service+' },
                     { id: 'analytics', icon: 'pie_chart', label: utils.t('analytics') },
+                    { id: 'reminders', icon: 'notifications', label: utils.t('reminders') },
                     { id: 'settings', icon: 'settings', label: utils.t('settings') }
                 ];
                 return `
